think I have fixed the footer display on smaller devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,10 @@ footer {
   background: #333;
 }
 
+#footer .container {
+    background: #333;
+}
+
 footer p {
   margin: 12px 0;
 }
@@ -29,8 +33,8 @@ nav h1 {
   font-size: 28px;
 }
 
-/* --- styles for sticky footer --------
------------------------------------- */
+/* --- styles for sticky footer -------------------------------------
+------------------------------------------------------------------ */
 html,
 body {
   height: 100%;
@@ -52,7 +56,7 @@ body {
   @media screen and (max-width: 479px) {
 
     #wrap {
-      margin: 0 auto -76px;
+      margin: 0 auto -64px;
     }
     
   }
@@ -73,9 +77,7 @@ body {
 
   #push,
   footer {
-    height: 76px;
-    /*background: tan;*/
-    background: #333;
+    height: 64px;
   }
 
 }
@@ -83,14 +85,14 @@ body {
 /* End of #push and #footer for page content to push down footer ----
 ------------------------------------------------------------------ */
 
-/* hiding the content for a moment so it is easier to see the footer */
-.main-content {
-  /*display: none;*/
-}
-
 /* removing top and bottom margin for smaller devices */
 @media screen and (max-width: 767px) {
   .navbar-nav {
     margin: 0 -15px;
   }
+}
+
+/* hiding the content for a moment so it is easier to see the footer */
+.main-content {
+  /*display: none;*/
 }
